objects/PMC_DH_Phone_Number_Format__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_Code_Length__c</fullName>
        <label>Code Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Country__c</fullName>
        <label>Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Format__c</fullName>
        <label>Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Phone_Number_Length__c</fullName>
        <label>Phone Number Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Phone Number Format</label>
    <pluralLabel>Phone Number Formats</pluralLabel>
</CustomObject>